--- a/main.css
+++ b/main.css
@@ -6,14 +6,14 @@ body {
 }
 
 header {
-    background-color: black;
+    background: linear-gradient(to right, red, orange, yellow, green, rgb(0, 174, 255), blue, purple);
     color: lightgreen;
     padding: 10px;
     font-size: 16pt;
 }
 
 footer {
-    background-color: black;
+    background: linear-gradient(to right, red, orange, yellow, green, rgb(0, 174, 255), blue, purple);
     color: lightgreen;
     padding: 10px;
     font-size: 16pt;
