--- a/main.css
+++ b/main.css
@@ -24,6 +24,8 @@ footer {
 a {
     text-decoration: none;
     color: rgb(41, 129, 41);
+    transition: 2.5s 200ms;
+    text-shadow: 3px 3px 2px gray;
 }
 
 a:visited {
@@ -35,6 +37,7 @@ a:hover {
     text-decoration: underline;
     background-color: white;
     font-weight: bold;
+    transition: 0.3s 200ms;
 }
 
 a:active {
