--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@ header {
     transition: 1s;
 }
 
+main {
+    padding: 10px ;
+}
+
 header:hover {
     background: linear-gradient(to right top, green, purple, orange);
     font-size: 20pt;
