--- a/main.css
+++ b/main.css
@@ -37,6 +37,10 @@ footer {
     font-style: italic;
     text-align: right;
     transition: 1s;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
 }
 
 footer:hover {
